--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@notionhq/client": "^2.2.3",
     "api": "^5.0.7",
-    "nodemailer": "^6.9.1"
+    "moment": "^2.29.4",
+    "nodemailer": "^6.9.1",
+    "readline-sync": "^1.4.10"
   }
 }
